<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <com.example.android.stemnews.CategoryMultiSelectPreference
        android:defaultValue="@array/settings_search_categories_values"
        android:entries="@array/settings_search_categories_labels"
        android:entryValues="@array/settings_search_categories_values"
        android:key="@string/settings_search_categories_key"
        android:title="@string/settings_search_categories_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>